# discord-music-bot

./: .Dockerfile.swp  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ASYNC_PG_IMPL_REVIEW.md  CLAUDE.md  Dockerfile  Dockerfile-39slim  Makefile  README.md  TOOD.md  build.sh  build_common.sh  build_docker.sh  build_k8s_dev.sh  build_k8s_prod.sh  coverage.json  deploy_docker.sh  docker-compose.yml  justfile  k8s_common.sh  k8s_down.sh  musicbot.py  musicplayer.py  pg_backup.sh  poetry.toml  pyproject.bak.toml  pyproject.toml  requirements.txt  source.py  sources.py  spotify.py  test.py  util.py  youtube.py
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  ci.yml  security.yml  todo-to-issue.yml
db/migrations/: 0001_play_history.sql  0002_stats_indexes.sql  0003_user_history_index.sql
deploy/k8s/: README.md
deploy/k8s/base/: bot-deployment.yaml  configmap.yaml  kustomization.yaml  lgtm-deployment.yaml  lgtm-pvc.yaml  lgtm-service.yaml  loki-config.yaml  namespace.yaml  priorityclass.yaml  redis-service.yaml  redis-statefulset.yaml  ytdlp-cache-pvc.yaml
deploy/k8s/overlays/dev/: kustomization.yaml
deploy/k8s/overlays/production/: bot-resources-patch.yaml  configmap-patch.yaml  kustomization.yaml  lgtm-resources-patch.yaml  pull-secret-patch.yaml  redis-patch.yaml
src/: backfill_history.py  config.py  db.py  diagnostics.py  guild_history.py  guild_queue.py  guild_state.py  healthz.py  help.py  history_archive.py  main.py  musicbot.py  musicplayer.py  redis_client.py  sources.py  spotify.py  telemetry.py  util.py  youtube.py  ytdlp_pool.py
tests/: conftest.py  helpers.py  test_backfill_history.py  test_context.py  test_db.py  test_diagnostics.py  test_guild_history.py  test_guild_queue.py  test_guild_state.py  test_healthz.py  test_help.py  test_history_archive.py  test_main.py  test_musicbot.py  test_musicplayer.py  test_pg_integration.py  test_redis_client.py  test_sources.py  test_spotify.py  test_util.py  test_youtube.py  test_ytdlp_pool.py
