[tool.poetry]
version = "0.1.0"
requires-poetry = '>=2.0'

packages = [
    { include = "src" },
]

[tool.poetry.scripts]
bot = "src.main:main"

[tool.poetry.dependencies]
requests = "^2.31.0"
ujson = "^5.13.0"
pynacl = "1.6.2"
davey = "^0.1.5"
# `default` brings yt-dlp-ejs (JS challenge solver scripts, exact-pinned by yt-dlp);
# `deno` brings the Deno binary as a PyPI wheel, discovered via the venv scripts dir —
# together they make web_safari a working fallback client behind android_vr
# (docs/PO_TOKEN_SIDECAR_PLAN.md).
yt-dlp = { version = "2026.7.4", extras = ["default", "deno"] }
# Exact pin: the pip plugin and the bgutil-pot-provider sidecar image in
# docker-compose.yml are released in lockstep — bump both together.
bgutil-ytdlp-pot-provider = "1.3.1"
async-timeout = "^5.0.1"
discord-py = "2.7.1"
redis = ">=5.0.0"
orjson = ">=3.9.0"
aiohttp = ">=3.14.1"
opentelemetry-api = ">=1.27.0"
opentelemetry-sdk = ">=1.27.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.27.0"
opentelemetry-instrumentation-redis = ">=0.48b0"
opentelemetry-instrumentation-aiohttp-client = ">=0.48b0"
structlog = ">=24.4.0"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3,<10"
pytest-asyncio = ">=0.25"
fakeredis = ">=2.26.0"
pytest-cov = "^7.1.0"

[tool.poetry.group.lint.dependencies]
pyright = "^1.1.409"
# Exact-pinned, like yt-dlp and discord-py, because a second file has to agree
# with it: .pre-commit-config.yaml pins the ruff hook by `rev`, and the hook runs
# ruff from its own isolated environment. Under a caret range any `poetry update`
# moved this side silently and the hook then formatted to a different version
# than `make lint` and CI checked. Bump both in the same commit.
ruff = "0.15.21"
pre-commit = "^4.6.0"

[tool.pyright]
# The single source of truth for pyright, read by both CI and Pylance. Settings
# lived here AND in a gitignored pyrightconfig.json, which silently won wherever
# it existed — so editors ran one config and CI another. Do not reintroduce that
# file: pyrightconfig.json takes precedence over this section and would make
# everything below dead config again.
pythonVersion = "3.14"
typeCheckingMode = "basic"
# No venvPath/venv here, deliberately. Hardcoding ./.venv made pyright resolve
# imports from that directory regardless of which environment was actually in
# use — and on a pyenv-virtualenv box `poetry install` lands in $VIRTUAL_ENV
# instead, leaving ./.venv stale. `make types` then type-checked a package set
# that `make lint` and `make test` never saw, which is exactly the "green
# locally, red in CI" failure `make check` exists to prevent. Each caller now
# names the interpreter it means: `make types` passes --pythonpath $(VENV_BIN),
# CI's `poetry run pyright` inherits the venv it installed into, and editors
# follow the interpreter you select. (The pyrightconfig.json warning above still
# stands — that file would override all of this.)
# Without this, an unnecessary suppression is invisible. The mypy-style
# `# type: ignore[code]` comments this repo used to carry were blanket pyright
# suppressions (there is no mypy here): 11 of them silenced nothing, and the
# rest hid 12 real errors. Prefer `# pyright: ignore[reportSomeRule]`, which
# names the rule and trips this check once it stops being needed.
reportUnnecessaryTypeIgnoreComment = "error"

[tool.ruff]
target-version = "py314"
# Default lint rules (pyflakes F + a pycodestyle E subset) already cover unused
# imports, undefined names, and import placement. ruff format is black-compatible
# and replaces black as the formatter.

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
filterwarnings = [
    "error",
    # audioop was removed in Python 3.13 but discord.py's Ogg/Opus parser still
    # imports it at module load time. Suppress until discord.py drops the reference.
    "ignore:'audioop' is deprecated:DeprecationWarning",
    # discord.py's Command.__init__ still calls asyncio.iscoroutinefunction, deprecated
    # in Python 3.14. Suppress until discord.py switches to inspect.iscoroutinefunction.
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[project]
name = "discord-music-bot"
description = ""
dynamic = ["version", "dependencies"]
readme = "README.md"
authors = []
maintainers = []
requires-python = '>=3.14,<4.0'
